# opencode-harness

./: .gitignore  Cargo.toml  PRD.md  README.md  contracts  iterate-prd.sh
harness/crates/api/: Cargo.toml
harness/crates/api/src/: client.rs  lib.rs  tests.rs  types.rs
harness/crates/cli/: Cargo.toml
harness/crates/cli/artifacts/03694a21-3efb-4c52-bff9-de0180ff3bd5/rust/: metadata.json  stderr.txt
harness/crates/cli/artifacts/0da83762-a1d9-4dec-8928-6489c4a43ed3/legacy/: metadata.json  stderr.txt
harness/crates/cli/artifacts/1e263db0-4504-4e3f-a648-a08c4b79157e/legacy/: metadata.json  stderr.txt
harness/crates/cli/artifacts/694700f9-c532-4004-afa1-49c31347e2b1/rust/: metadata.json  stderr.txt
harness/crates/cli/artifacts/7902b67e-4b17-426b-9b0b-4031c44a10e8/legacy/: metadata.json  stderr.txt
harness/crates/cli/artifacts/893ee54c-8e0c-4c0e-874f-3b2954fa2d31/rust/: metadata.json  stderr.txt
harness/crates/cli/artifacts/8bee6450-8d85-46df-9d12-54351781f5f7/rust/: metadata.json  stderr.txt
harness/crates/cli/artifacts/bfc69bb2-48d2-4fff-9769-c03c0fa4d7da/legacy/: metadata.json
harness/crates/cli/artifacts/c4893947-9673-4461-9aad-a0180c1e7a73/rust/: metadata.json  stderr.txt
harness/crates/cli/artifacts/fb371ead-a92e-4d86-928c-3709ffc1e6d2/legacy/: metadata.json
harness/crates/cli/artifacts/run-11d31dfc-e7a3-40cf-8c72-bf37f4c9d389/diff/: report.json  verdict.md
harness/crates/cli/artifacts/run-5bdd9559-360d-48df-b459-23c510b3a1b1/diff/: report.json  verdict.md
harness/crates/cli/artifacts/run-7cadcfa3-5395-444e-9f6b-c5ca5a4b00fd/diff/: report.json  verdict.md
harness/crates/cli/artifacts/run-ba349490-e265-4dc4-a689-9ff8e88982ae/diff/: report.json  verdict.md
harness/crates/cli/artifacts/run-bbf108e2-d0f6-4626-99de-13c2c3f731a0/diff/: report.json  verdict.md
harness/crates/cli/src/: main.rs  report.rs
harness/crates/cli/tests/: cli_run.rs
harness/crates/core/: Cargo.toml
harness/crates/core/artifacts/008ca044-4036-4baf-b97b-a45d7bdd11a6/legacy/: metadata.json
harness/crates/core/artifacts/0204557c-3ece-41c8-a8b4-f5be6073b38f/legacy/: metadata.json
harness/crates/core/artifacts/02556a58-9a40-4ee4-8a48-1cec9f9dec78/legacy/: metadata.json
harness/crates/core/artifacts/03ce8909-c774-4ae3-a6ef-4825c509d3cb/rust/: metadata.json
harness/crates/core/artifacts/040fe770-e61c-425a-aaf4-5663381eee72/legacy/: metadata.json
harness/crates/core/artifacts/04810c8e-d293-48bb-9a3b-e86c6e57876d/rust/: metadata.json
harness/crates/core/artifacts/04abee07-b65c-48fc-aef8-c1453e398a15/legacy/: metadata.json
harness/crates/core/artifacts/05259203-dee3-4061-9c74-f35886dc20bf/rust/: metadata.json
harness/crates/core/artifacts/057c3cce-b0ec-48bd-a4cc-7b8fa3257616/rust/: metadata.json
harness/crates/core/artifacts/069e80cc-8692-4108-8187-ac520ef34fcb/legacy/: metadata.json  stderr.txt
harness/crates/core/artifacts/07d0172d-fb48-48d5-a001-ca2302fc3aaa/legacy/: metadata.json
harness/crates/core/artifacts/08234074-4788-40a1-b1cb-8f11dd3b0cdd/rust/: metadata.json
harness/crates/core/artifacts/09d40e36-e9fb-4ba2-8031-60f5fe674cda/rust/: metadata.json
harness/crates/core/artifacts/09f6fd70-0705-4346-bbb4-10a5ac06d491/legacy/: metadata.json  stderr.txt
harness/crates/core/src/: error.rs  lib.rs  logging.rs
harness/crates/core/src/config/: app_config.rs  loader.rs  mod.rs  suite_loader.rs
harness/crates/core/src/loaders/: baseline_loader.rs  contract_loader.rs  fixture_loader.rs  mod.rs  regression_loader.rs  task_loader.rs  task_validator.rs  whitelist_loader.rs
harness/crates/core/src/normalizers/: line_endings.rs  mod.rs  normalizer.rs  paths.rs  variance.rs  whitelist_validator.rs  whitespace.rs
harness/crates/core/src/reporting/: gate.rs  github.rs  metrics.rs  mod.rs  progress.rs  renderer.rs  report.rs  suite.rs
harness/crates/core/src/runners/: artifact_persister.rs  baseline_comparator.rs  baseline_recorder.rs  binary_resolver.rs  differential_runner.rs  legacy_runner.rs  mod.rs  regression_candidate_generator.rs  rust_runner.rs
harness/crates/core/src/types/: agent_mode.rs  allowed_variance.rs  artifact.rs  assertion.rs  baseline.rs  capability_summary.rs  capture_options.rs  entry_mode.rs  environment.rs  execution_level.rs  execution_policy.rs  execution_result.rs  failure_classification.rs  fixture.rs  mod.rs  on_missing_dependency.rs  parity_verdict.rs  path_convention.rs  provider_mode.rs  regression_case.rs  report.rs  runner_input.rs  runner_output.rs  session_metadata.rs  severity.rs  task.rs  task_input.rs  task_outputs.rs  task_status.rs  workspace.rs
harness/crates/core/src/verifiers/: mod.rs  side_effect_verifier.rs  state_machine_verifier.rs  verifier.rs
harness/crates/core/tests/: agent_mode.rs  allowed_variance.rs  artifact_persister.rs  assertion.rs  asset_structure_validation.rs  ci_gate_smoke_tests.rs  comparator.rs  contract_yaml_tests.rs  differential_runner.rs  entry_mode.rs  error_handling_tests.rs  execution_policy.rs  externalized_config_tests.rs  fixture.rs  fixture_loader.rs  fixture_loader_tests.rs  legacy_runner_smoke_tests.rs  module_exports.rs  normalizer.rs  on_missing_dependency.rs  regression_case_smoke_tests.rs  report_schema_smoke_tests.rs  report_schema_validation.rs  rust_runner.rs  rust_runner_smoke_tests.rs  severity.rs  smoke_task_loading.rs  smoke_task_loading_tests.rs  suite_selection_smoke_tests.rs  task.rs  task_input.rs  task_outputs.rs  task_schema_tests.rs  task_schema_validation.rs  types_mod_exports.rs  verifier.rs  whitelist_rules_smoke_tests.rs
harness/crates/recovery/: Cargo.toml
harness/crates/recovery/src/: error_handling_tests.rs  integration_tests.rs  lib.rs
harness/runners/: Cargo.toml  README.md
harness/runners/src/: execution_result.rs  lib.rs
harness/verifiers/: Cargo.toml  README.md
harness/verifiers/src/: lib.rs
(+631 files in other folders)
