[workspace]
resolver = "2"
members = [
    "harness/crates/core",
    "harness/crates/cli",
    "harness/crates/api",
    "harness/crates/recovery",
    "harness/runners",
    "harness/comparators",
    "harness/verifiers",
    "harness/normalizers",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["opencode-harness team"]
license = "MIT"

[workspace.dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
regex = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"
dirs = "5"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
wiremock = "0.6"
