[package]
name = "runners"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[package.metadata.deprecated]
message = "This crate is deprecated. Use opencode-core crate runners module instead (harness/crates/core/src/runners/). All functionality has been consolidated there."

[dependencies]
core = { package = "opencode-core", path = "../crates/core" }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }