[package]
name = "cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
clap = { workspace = true }
opencode-core = { path = "../core" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[[bin]]
name = "opencode-harness"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3"
