[package]
name = "opencode-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
toml.workspace = true
regex.workspace = true

[dev-dependencies]
tempfile = "3"
serde_yaml = "0.9"
