[package]
name = "opencode-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
toml.workspace = true
regex.workspace = true
chrono.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tempfile = "3"
walkdir = "2.5"
git2 = "0.19"
dirs = "5"
comparators = { path = "../../comparators" }

[dev-dependencies]
serde_yaml = "0.9"
