[package]
name = "opencode-recovery"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
opencode-core = { path = "../core" }
opencode-api = { path = "../api" }
thiserror.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
tempfile = "3"

[dev-dependencies]
wiremock = "0.6"